[package]
name = "my_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
grok = { version = "2.4", default-features = false, features = ["pcre2"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenv = "0.15"
